Добавление страницы goods

--- a/index.html
+++ b/index.html
@@ -41,14 +41,151 @@
             </div>
         </section>
 
-        <section class="products">
+        <section class="product">
             <div class="container">
-                <div class="products-header">
-                    <h3 class="products-header--title">
-                        Рестораны
-                    </h3>
-
-                    <input type="text" placeholder="Поиск блюд и ресторанов" class="products-header-search">
+                <div class="product-header">
+                    <h3 class="product-header-title">Рестораны</h3>
+                    <input type="text" class="product-header-searh" placeholder="Поиск блюд и ресторанов">
+                </div>
+                <div class="products-wrapper">
+                    <a href="goods.html" class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/PizzaPlus.jpg" alt="Restoran1">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title">Пицца плюс</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/Tanuki.jpg" alt="Restoran2">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title"> Тануки</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/FoodBand.jpg" alt="Restoran3">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title">FoodBand</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/GreedyPizza.jpg" alt="Restoran4">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title">Жадина-пицца</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/FoodPoint.jpg" alt="Restoran5">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title">Точка еды</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-card-img">
+                            <img src="./src/img/rests/PizzaBurger.jpg" alt="Restoran6">
+                        </div>
+                        <div class="product-card-description">
+                            <div class="product-card-description-row">
+                                <h4 class="product-card-description-title">PizzaBurger</h4>
+                                <div class="product-card-description-badge">50 мин</div>
+                            </div>
+                            <div class="product-card-description-row">
+                                <div class="product-card-description-info">
+                                    <div class="product-card-description-raiting">
+                                        <img src="./src/img/icons/stars.svg" alt="stars">
+                                        4.5
+                                    </div>
+                                    <div class="product-card-description-price">
+                                        От 900₽
+                                    </div>
+                                    <div class="product-card-description-group">Пицца</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
